@@ -13,14 +13,16 @@ namespace C
             this.OutputDirectoryPath = node.GetTargettedModuleBuildDirectory(C.Toolchain.LibraryOutputSubDirectory);
 
             IArchiverOptions archiverOptions = this as IArchiverOptions;
-
             archiverOptions.ToolchainOptionCollection = ToolchainOptionCollection.GetSharedFromNode(node);
-            archiverOptions.AdditionalOptions = "";
         }
 
         public ArchiverOptionCollection(Opus.Core.DependencyNode node)
         {
             this.InitializeDefaults(node);
+
+            IArchiverOptions archiverOptions = this as IArchiverOptions;
+            archiverOptions.AdditionalOptions = "";
+
             this.SetDelegates(node);
         }
 
