@@ -52,12 +52,15 @@ namespace C
             linkerOptions.GenerateMapFile = true;
             linkerOptions.Libraries = new Opus.Core.FileCollection();
             linkerOptions.StandardLibraries = new Opus.Core.FileCollection();
-            linkerOptions.AdditionalOptions = "";
         }
 
         public LinkerOptionCollection(Opus.Core.DependencyNode node)
         {
             this.InitializeDefaults(node);
+
+            ILinkerOptions linkerOptions = this as ILinkerOptions;
+            linkerOptions.AdditionalOptions = "";
+
             this.SetDelegates(node);
         }
 
